# recursive-execution-harness-lab

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  site.yml
.hermes/droid-prompts/: phase-1-foundations.md  phase-2-planner-worker.md  phase-3-synthesizer-verifier.md  phase-4-orchestration.md  phase-5-cli-corpus.md  phase-6-tests-docs.md
benchmarks/research_synthesis/corpora/sample/: 001_context_window_limits.md  002_recursive_execution_pattern.md  003_durable_workflows.md  004_mcp_protocol.md  005_evidence_tracing.md  006_policy_as_code.md  007_autonomous_coding_agents.md  008_verification_gates.md
benchmarks/research_synthesis/tasks/: recursive_execution.yaml
docs/: ARCHITECTURE.md  CNAME  _config.yml  index.html  index.md
docs/_app/: version.json
docs/_app/immutable/assets/: 0.B96awqA5.css  0.BOGI-otT.css  0.Cg6FUqbN.css  0.DytWs-sZ.css
docs/_app/immutable/chunks/: BElmOODP.js  BUBlFwMl.js  C9J0Amn_.js  DDeKMupl.js  DQdtg_3N.js  (+2 more)
site/: package.json  pnpm-lock.yaml  svelte.config.js
site/src/: app.html
site/src/routes/: +layout.svelte  +page.svelte
src/rxh/: __init__.py  cli.py  compare.py  ingest.py  json_utils.py  long_context.py  models.py  planner.py  policy.py  providers.py  recursive.py  synthesizer.py  trace.py  verifier.py  worker.py
tests/: conftest.py  test_compare.py  test_docs_contract.py  test_ingest.py  test_json_utils.py  test_long_context.py  test_models.py  test_planner.py  test_policy.py  test_providers.py  test_recursive.py  test_synthesizer.py  test_trace.py  test_verifier.py  test_worker.py
(+39 files in other folders)
