[project]
name = "recursive-execution-harness-lab"
version = "0.1.0"
description = "A research harness for comparing long-context agents against recursive evidence-based execution."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "tiktoken>=0.7",
    "sqlite-utils>=3.36",
]

[project.scripts]
rxh = "rxh.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]
pdf = ["pypdf>=4.0"]
otel = ["opentelemetry-api", "opentelemetry-sdk"]
web = ["fastapi", "uvicorn", "jinja2"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "RUF", "ARG", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["rxh"]

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rxh"]
